force-app/main/default/objects/DocumentalActivity__c/DocumentalActivity__c.object-meta.xml
<CustomObject>
    <label>Attività Documentale</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Numero Attività</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attività Documentali</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>