force-app/main/default/objects/DocumentalActivity__c/fields/AttachmentCode__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCode__c</fullName>
    <description>Rappresenta il codice dell&apos;allegato generato da E1</description>
    <label>Codice Allegato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>