force-app/main/default/objects/DocumentalActivity__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Attività Documentali</relationshipLabel>
    <relationshipName>Attivit_Documentali</relationshipName>
    <type>Lookup</type>
</CustomField>