force-app/main/default/objects/DocumentalActivity__c/fields/DocumentalSystem__c.field-meta.xml
<CustomField>
    <fullName>DocumentalSystem__c</fullName>
    <formula>IF(
OR(AND(NOT(ISBLANK(OrderId__c)), CONTAINS(TEXT(OrderId__r.SignMode__c), &apos;OTP&apos;)),
AND(NOT(ISBLANK(CaseId__c)), CONTAINS(TEXT(CaseId__r.SignMode__c), &apos;OTP&apos;))),
&apos;Intesa&apos;, &apos;Postel&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sistema di Archiviazione</label>
    <type>Text</type>
</CustomField>