force-app/main/default/objects/DocumentalActivity__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ordine</description>
    <label>Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Attività Documentali</relationshipLabel>
    <relationshipName>Attivit_Documentali</relationshipName>
    <type>Lookup</type>
</CustomField>