force-app/main/default/objects/DocumentalActivity__c/fields/ParentProcessId__c.field-meta.xml
<CustomField>
    <fullName>ParentProcessId__c</fullName>
    <description>Campo tecnico inviato dal moga</description>
    <label>Id Processo Padre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>