force-app/main/default/objects/DocumentalActivity__c/fields/ProcessId__c.field-meta.xml
<CustomField>
    <fullName>ProcessId__c</fullName>
    <description>Campo tecnico inviato dal moga</description>
    <label>Id Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>