force-app/main/default/objects/DocumentalActivity__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <description>Data di rientro degli allegati</description>
    <label>Data Rientro</label>
    <type>Date</type>
</CustomField>